@@ -1,3 +1,9 @@
+2006-04-05  Vince Darley <vincentdarley@users.sourceforge.net>
+
+	* generic/tkText.c: fix to crash caused on some platforms
+        by new tests introduced to check for [Bug 1414171], which
+	destroy the text widget in the dump callback script.
+
 2006-03-29  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tkOption.c (TkOptionDeadWindow): handle
